2015-09-28  c.hetherington  <cth@carlh.net>

	* Fix mis-identification of a folder of images
	as a DCP in some cases.

2015-09-27  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.7 released.

2015-09-26  Carl Hetherington  <cth@carlh.net>

	* Fix crash with embedded subtitles with some
	video files.

	* Version 2.3.6 released.

2015-09-25  Carl Hetherington  <cth@carlh.net>

	* Fix assertion failure when loading .MTS files (#702).

	* Fix incorrect hint about 3D content in a 2D DCP.

	* Detect and convert from non-UTF-8
	subtitle encodings.

2015-09-21  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.5 released.

2015-09-20  Carl Hetherington  <cth@carlh.net>

	* Fix setting of frame rate when loading
	image folders.

2015-09-18  Carl Hetherington  <cth@carlh.net>

	* Add another upmixer which is a simpler
	matrix-type thing with no filtering
	(apart from Lfe).

2015-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.4 released.

2015-09-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.3 released.

2015-09-16  Carl Hetherington  <cth@carlh.net>

	* Fix exception on adding an empty folder
	as content (#691).

	* Add config option for default standard
	(SMPTE / Interop).

2015-09-16  c.hetherington  <cth@carlh.net>

	* Allow imported DCPs to be referenced rather
	than re-wrapped (i.e. creation of VF DCPs).

2015-09-15  Carl Hetherington  <cth@carlh.net>

	* Fix crash on re-making certificate chains
	after removing all existing certificates (#690).

2015-09-15  c.hetherington  <cth@carlh.net>

	* Fix failure to display audio analysis
	in some cases.

2015-09-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.3.2 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Fix Windows short-cut to encode server.

	* Version 2.3.1 released.

2015-09-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.2.1 released.

2015-09-03  c.hetherington  <cth@carlh.net>

	* Quicker, though slightly less safe,
	check for existing picture data; go back